提交修改后的文件

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <h4>SEO推广</h4>
                     </div>
                     <div class="content">
-                        <p>系统化的针对百度，google等主流搜索引擎推广服务</p>
+                        <p>系统化的针对百度等主流搜索引擎服务</p>
                     </div>
                 </div>
             </div>
